# favorita-forecast-ml-pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: eda_data_strategy.ipynb  machine_learning.ipynb
src/: pipeline.py
src/data/: __init__.py  clean_data.py  feature_engineering.py  load_data.py  merge_data.py  preprocess_data.py  save_data.py
