[project]
name = "favorita-forecast"
version = "0.1.0"
dependencies = [
    "autogluon.timeseries>=0.8.2",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
    "plotly>=5.17.0",
    "seaborn>=0.13.2",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]
